--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "babel-plugin-glsl": "^1.0.0",
     "glsl-noise": "0.0.0",
     "glslify": "^7.1.1",
+    "locomotive-scroll": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-locomotive-scroll": "^0.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.0",
