--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mactavish",
   "version": "0.1.0",
   "private": true,
+  
+  "homepage": "http://ZackMacTavish.github.io/MacTavish",
+
   "dependencies": {
     "@react-three/drei": "^7.8.3",
     "@react-three/fiber": "^7.0.7",
@@ -26,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
